--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -3,32 +3,35 @@ margin: 0;
 }
 html, body {
 height: 100%;
+
 }
 .wrapper {
-min-height: 100%;
-height: auto !important;
-height: 100%;
-margin: 0 auto -66px;
-
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin-bottom: -66px;
+	position: relative;
 }
 
 
 .footer, .push {
-	height: -66px;
+	height: 66px;
 	clear: both;
 	}
 
 .footer {
-background-color: #666666;
-	text-align: center;
 	font-family: 'Arial', 'Helvetica Neue', 'Helvetica', 'sans-serif';
 	color: #777777;
+	text-align: center;
+	background-color: #666666;
 	border-top: solid #4aaaa5 10px;
+	box-sizing: border-box;
 }
 
 
 .footer p {
-	padding: 20px;
+	padding: 10px 20px 0 20px;
+	margin: 0px;
 }
 /* Tag CSS */
 h1, h2, h3 {
@@ -123,22 +126,22 @@ h3 {
 /*Main Content CSS */
 
 #middlesection {
-	box-sizing: border-box;
+
 	width: 100%;
 	border-top: solid 2px #cccccc;
 	position: relative;
 	background-image: url('../images/confectionary.png');
 	padding: 40px 0 40px 0;
-
-	overflow: auto;	
-
+	height: 100%;
+	overflow: auto;
 }
+
 #contentcontainer {
 	box-sizing: border-box;
 	width: 960px;
 	margin-left: 155px;
 	overflow: auto;
-
+	height: 100%;
 }
 
 .pagecontent {
@@ -166,12 +169,14 @@ height: 100%;
 	float: left;
 }
 
-p {
+p, form {
 	font-family: 'Arial', 'Helvetica Neue', 'Helvetica', 'sans-serif';
 	color: #777777;
 	font-size: 115%;
 	line-height: 2;
 }
+
+
 
 .sociallinks {
 	box-sizing: border-box;
