updated profile bio and adusted p tags on the page

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -194,6 +194,11 @@ form {
 	float: left;
 }
 
+.profile p {
+	text-indent: 25px;
+	margin-bottom: 10px;
+}
+
 .input {
 	width: 100%;
     box-sizing: border-box;
